# sonar-system

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  run.py
docs/: architecture.md  filters.md  getting-started.md  index.md  radar-types.md  sensors.md  visualization.md
firmware/: README.md
firmware/sonar_robot/: sonar_robot.ino
sonar_system/: __init__.py  control_center.py  control_center_v2.py  data_processor.py  main.py
sonar_system/config/: __init__.py  settings.py
sonar_system/core/: __init__.py  base_radar.py  serial_manager.py
sonar_system/filters/: __init__.py  base_filter.py  filter_chain.py  kalman_filter.py  median_filter.py  moving_average.py
sonar_system/radars/: __init__.py  comparison_radar.py  lidar_3d_radar.py  object_detection_radar.py  polar_radar.py  robot_fov_radar.py
sonar_system/sensors/: __init__.py  base_sensor.py  mock_sensor.py  ultrasonic_sensor.py
sonar_system/widgets/: __init__.py  joystick.py  mini_radar.py
